# yame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fibs.ts  fips.yml
.github/workflows/: build.yml  deploy.yml
codegen/: mc6809e.template.h  mc6809e_desc.yml  mc6809e_gen.py
fibs-scripts/: webpage.ts
fips-files/configs/: metal-osx-vscode-release.yml  metal-osx-xcode-debug.yml  metal-osx-xcode-release.yml  wasm-ninja-debug.yml  wasm-ninja-release.yml
fips-files/verbs/: webpage.py
libs/: CMakeLists.txt
libs/sokol/: CMakeLists.txt  fs.c  fs.h  gfx.c  gfx.h  shaders.glsl  sokol-dll.c  sokol-noentry.c  sokol-noentry.m  sokol.c  sokol.cc  sokol.m  sokol.mm  ui.cc  ui.h  ui_dasm.h  ui_display.h  ui_kbd.h  ui_memedit.h  ui_settings.h  ui_snapshot.h  ui_util.h
src/: CMakeLists.txt  clk.h  data.h  fs.c  fs.h  kbd.h  m6809.c  m6809.h  m6809dasm.h  main.c  mc6809e.h  mc6809e_test.c  mo5-ui-impl.cc  mo5.c  mo5.h  mo5rom.c  mo5rom.h  sokol_shaders.glsl  ui_emu.h
src/ui/: ui_mc6809.h  ui_mo5.h
webpage/: emsc.html  index.html  style.css
webpage/mo5/: 3dfight_mo5.k7  androide-mo5.k7  arkanoid_mo5.k7  avenger_mo5.k7  classiques-vol1_mo5.k7  editeur-mo5.k7  f15-strike-eagle_mo5.k7  flipper_mo5.k7  football_mo5.k7  forever14.k7  formule-1_mo5.k7  game-over_mo5.k7  glouton_mo5.k7  green-beret_mo5.k7  judoka_mo5.k7  karate_mo5.k7  krakout_mo5.k7  l-aigle-d-or_mo5.k7  le-5eme-axe_mo5.k7  mission-pas-possible_mo5.k7  missions-en-rafale_mo5.k7  numero-10_mo5.k7  raid-sur-tenere_mo5.k7  regates_mo5.k7  renegade_mo5.k7  runway2_mo5.k7  runway_mo5.k7  sapiens_mo5.k7  sorcery_mo5.k7  stanley_mo5.k7  super-tennis-fil_mo5.k7  tout-schuss_mo5.k7  vampire_mo5.k7  zero-de-conduite_mo5.k7
