# select the sokol-gfx backend depending on platform
if(FIPS_EMSCRIPTEN)
    add_definitions(-DSOKOL_GLES3)
    set(slang "glsl300es")
elseif(FIPS_ANDROID)
    add_definitions(-DSOKOL_GLES3)
    set(slang "glsl300es")
elseif(FIPS_WINDOWS)
    add_definitions(-DSOKOL_D3D11)
    set(slang "hlsl4")
elseif(FIPS_OSX)
    add_definitions(-DSOKOL_METAL)
    if (FIPS_IOS)
        set(slang "metal_ios")
    else()
        set(slang "metal_macos")
    endif()
else()
    add_definitions(-DSOKOL_GLCORE)
    if (FIPS_IOS)
        set(slang "glsl300es")
    else()
        set(slang "glsl410")
    endif()
endif()
add_subdirectory(sokol)
